# ci_shared

./: .gitignore  .gitleaks.toml  AGENTS.md  CI_RULES.md  CLAUDE.md  Makefile  README.md  SECURITY.md  ci_shared.config.json  ci_shared.mk  pyproject.toml  shared-tool-config.toml  xci.config.json.example
ci_tools/: __init__.py  __main__.py  _messages.py  ci.py  test_constants.py
ci_tools/ci_runtime/: __init__.py  codex.py  config.py  coverage.py  environment.py  failures.py  heuristics.py  messaging.py  models.py  patch_cycle.py  patching.py  process.py  workflow.py
ci_tools/config/: codespell_ignore_words.txt
ci_tools/scripts/: __init__.py  ast_utils.py  ci.sh  cli_detection.py  complexity_guard.py  config_loader.py  coverage_guard.py  data_guard.py  dependency_guard.py  directory_depth_guard.py  documentation_guard.py  duplicate_detection.py  function_size_guard.py  generate_commit_message.py  guard_common.py  import_analysis.py  import_checking.py  inheritance_guard.py  method_count_guard.py  module_guard.py  policy_checks.py  policy_collectors_ast.py  policy_collectors_text.py  policy_context.py  policy_guard.py  policy_rules.py  policy_visitors.py  propagate_ci_shared.py  structure_guard.py  tool_config_guard.py  unused_module_guard.py  xci.sh
ci_tools/utils/: consumers.py
ci_tools_proxy/: __init__.py
docs/: README.md  automation.md  development.md  getting-started.md  guard-suite.md  index.md  migrating-from-xci.md
scripts/: README.md  ci.sh  complexity_guard.py  requirements.txt  sync_project_configs.py
tests/: conftest.py  test_bandit_wrapper.py  test_ci.py  test_cli_detection.py  test_codex.py  test_complexity_guard.py  test_config.py  test_constants.json  test_consumers.py  test_coverage.py  test_coverage_guard.py  test_data_guard.py  test_dependency_guard.py  test_directory_depth_guard.py  test_documentation_guard.py  test_environment.py  test_failures.py  test_function_size_guard.py  test_generate_commit_message.py  test_guard_common.py  test_heuristics.py  test_inheritance_guard.py  test_messaging.py  test_method_count_guard.py  test_models.py  test_module_guard.py  test_patch_cycle.py  test_patching.py  test_policy_checks.py  test_policy_collectors_ast.py  test_policy_collectors_text.py  test_policy_context.py  test_policy_guard.py  test_policy_rules.py  test_process.py  test_propagate_ci_shared.py  test_structure_guard.py  test_tool_config_guard.py  test_unused_module_guard.py  test_workflow.py  (+1 more)
